# torchlft

./: .flake8  .gitignore  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: build_docs.yaml  test_package.yml
benchmarks/: benchmark_phi_four.py
docs/source/: conf.py  hello.rst  index.rst  introduction.rst  modules.rst  torchlft.rst
examples/: hmc_phi_four_example.py
examples/phi_four/: affine_flow.py  hmc.py  metropolis.py
experiments/gauss/: classes.py  experiment.md  gauss.md
experiments/gauss_1/: Makefile  experiment.md
experiments/gauss_2/: experiment.md
experiments/gaussian/: Makefile  cholesky.md  coupling.md  dense.md  next.md  plot.py
experiments/gaussian/cholesky/: experiment.md
experiments/gaussian/dense_coupling/: experiment.md
experiments/gaussian/trans_equivar/: experiment.md
experiments/phi4/: config.yaml  dense_coupling.md  hmc.md  plot.py  spline.yaml  transl_equiv_test.md  z2_equiv_test.md
src/torchlft/: __init__.py  abc.py  actions.py  autocorrelation.py  base.py  constraints.py  distributions.py  exceptions.py  fields.py  functional.py  geometry.py  hmc.py  integrators.py  lattice.py  metrics.py  model.py  models.py  networks.py  nflow.py  nn.py  nntransforms.py  observables.py  physics.py  sample.py  train.py  transforms.py  typing.py  utils.py
src/torchlft/CPN/: action.py  hmc.py  observables.py  script.py
src/torchlft/O2/: base.py
src/torchlft/O3/: observables.py
src/torchlft/common/: mcmc.py
src/torchlft/flows/: base.py  coupling.py  unconditional.py  utils.py
src/torchlft/free_scalar/: free_scalar.py
src/torchlft/functional/: actions.py  transforms.py  utils.py
src/torchlft/gauss/: actions.py
src/torchlft/lattice/: action.py  autocorrelation.py  sample.py
src/torchlft/lightning/: metrics.py  optim.py
src/torchlft/model_zoo/: cholesky.py  gaussian.py  phi4_coupling.py  phi4_legacy_coupling.py
src/torchlft/models/: gaussian.py  phi4.py
src/torchlft/nflow/: io.py  layer.py  logging.py  metrics.py  model.py  nn.py  partition.py  train.py  utils.py
src/torchlft/phi4/: action.py  base.py  coupling_flow.py  flow_base.py  hamiltonian.py  mcmc.py  new_couplings.py  observables.py
src/torchlft/phi_four/: action.py  actions.py  distributions.py  flows.py  mcmc.py  observables.py  sample.py
src/torchlft/sample/: algorithms.py  sampler.py  utils.py
src/torchlft/scalar/: action.py  actions.py  coupling_layers.py  observables.py
src/torchlft/scripts/: cli.py  coup.yaml  leg.yaml  linear.yaml  train.py
src/torchlft/transforms/: __init__.py  affine.py  bspline.py  mixture.py  pointwise.py  projection.py  (+4 more)
src/torchlft_experiments/: cli.py  io.py
tests/: README.rst  test_distributions.py  test_functional.py  test_metrics.py  test_observables.py  test_train.py  test_transforms.py  test_utils.py
tests/common/: test_mcmc.py
tests/flows/: test_coupling.py  test_unconditional.py
tests/functional/: test_transforms.py
tests/phi_four/: test_actions.py  test_hmc_implementations.py  test_sample.py
tests/sample/: test_reweighting.py  test_utils.py
(+72 files in other folders)
