[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torchlft"
version = "0.1.0"
description = "A PyTorch library for Machine Learning sampling approaches to Lattice Field Theories"
authors = ["marshrossney <17361029+marshrossney@users.noreply.github.com>"]
license = "GPLv3"
packages = [
    { include = "torchlft", from="src" },
    { include = "torchlft_examples", from="src" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0"
omegaconf = "^2.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipython = "^8.13.2"

[tool.poetry.group.examples.dependencies]
jsonargparse = "^4.21.1"
pytorch-lightning = "2.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "benchmarks"]
python_files = ["test*.py", "benchmark*.py"]
python_functions = ["test", "benchmark"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytorch_lightning.utilities.warnings.PossibleUserWarning",
]

[tool.black]
line-length = 79
target-version = ['py310']
exclude = '''
(
  /(
      \.git
    | \.github
    | \.pytest_cache
    | \.hypothesis
    | \.tox
    | \.venv
    | docs
    | __pycache__
    | workbench
  )/
)
'''
