[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torchlft"
version = "0.1.0"
description = "Personal library for Lattice Field Theory and Normalising Flows in Python"
authors = ["marshrossney <17361029+marshrossney@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 79
target-version = ['py310']
exclude = '''
(
  /(
      \.git
    | \.github
    | \.pytest_cache
    | \.venv
    | __pycache__
    | workbench
  )/
)
'''
